# daily-contributions

./: .gitignore  Makefile  README.md  constants.py  find_git_repos.py  git_utils.py  index_loc.py  pyproject.toml  report_generator.py
src/daily_contributions/: discovery.py  image_sequence.py  indexer.py  node_modules_scanner.py  report.py  worktrees.py
tests/: test_classify_activity.py  test_image_sequence.py  test_numstat.py  test_unarchived_tickets.py  test_worktrees.py
tickets/: T-000015.md  T-000016.md  T-000017.md  T-000018.md  T-000019.md  T-000020.md  T-000021.md  T-000022.md  T-000023.md  T-000024.md  T-000025.md  T-000026.md  T-000027.md  T-000028.md  T-000029.md  T-000030.md  T-000031.md  T-000032.md  T-000033.md  last_ticket_id
tickets/archive/: T-000001.md  T-000002.md  T-000003.md  T-000004.md  T-000005.md  T-000006.md  T-000007.md  T-000008.md  T-000009.md  T-000010.md  T-000011.md  T-000012.md  T-000013.md  T-000014.md  T-000015.md  T-000016.md  T-000017.md  T-000018.md  T-000019.md  T-000020.md  T-000021.md  T-000022.md  T-000023.md  T-000024.md  T-000025.md  T-000026.md  T-000027.md  T-000028.md  T-000029.md  T-000030.md  T-000031.md  T-000033.md
tools/: clean_worktrees.py  find_node_modules.py  find_repos.py  image_sequence_detection.py  index.py  report.py
