[project]
name = "daily-contributions"
version = "0.1.0"
description = "Track daily code contributions across all your git repos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
find-node-modules = "daily_contributions.node_modules_scanner:main"
find-image-sequences = "daily_contributions.image_sequence:main"
clean-worktrees = "daily_contributions.worktrees:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daily_contributions"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.ruff]
target-version = "py313"
extend-exclude = [
    "tickets/mt/muontickets",
]
